admin/css/booking-management-dashboard.css
*,
::after,
::before {
  box-sizing: border-box;
}

html,
body {
  margin: 0px;
  padding: 0px;
  font-family: 'Inter', sans-serif;
  background: #F5F5F5;
}

a {
  text-decoration: none;
  color: inherit;
}

.bgcolor {
  background: #fff !important;
}

.pagewrapper {
  width: 98%;
  margin: auto;
}

.searchpage {
  width: 100%;
  height: auto;
  min-height: 300px;
  float: left;
  margin-top: 25px;
}

.topbar {
  width: 100%;
  height: 70px;
  padding: 10px 24px;
  float: left;
  margin-bottom: 12px;
  border-radius: 8px;
}

.topleftbar {
  width: 50%;
  height: auto;
  float: left;
  padding-top: 10px;
}

.toptitle {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 130%;
  color: #232D42;
}

.toprightbar {
  width: auto;
  height: auto;
  float: right;
}

.topmenu {
  width: 72px;
  height: 28px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  text-align: center;
  float: left;
  margin-right: 32px;
  color: #3A57E8;
  padding-top: 12px;
}

.topmenubtn {
  padding: 8px 24px;
  float: left;
  background: #3A57E8;
  box-shadow: 0px 8px 16px rgba(59, 138, 255, 0.25);
  border-radius: 4px;
  color: #fff;
  margin-top: 7px;
}

.mainpage {
  width: 100%;
  float: left;
  /* padding: 30px 33px; */
  min-height: 800px;
  border-radius: 8px;
  display: flex;
  gap: 25px;
  padding: 0px !important;

}

.commonleftbar {
  padding: 30px 22px;
  width: 100%;
  float: left;
  gap: 20px;
  margin-bottom: 16px;
  flex-wrap: wrap;
  display: flex;
  border-radius: 8px;
}


.widgetbar {
  width: 100%;
  display: flex;
  gap: 25px;
  margin-top: 20px;
}

.widgetbox {
  flex: 1 1 0;
  min-width: 180px;
  height: auto;
  background: #fff;
  box-shadow: 0px 10px 13px rgba(17, 38, 146, 0.05);
  border-radius: 8px;
  padding: 15px;
}

.leftwidget {
  width: 66%;
  float: left;
  margin-right: 2%;
}

.rightwidget {
  width: 30%;
  float: left;
}

h2 {
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  color: #000;
  margin: 0px;
  line-height: 1.8;
}

h2 span {
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
}

.count_span {
  font-style: normal;
  font-weight: 600 !important;
  font-size: 18px !important;
}

select.widgetselect {
  width: 80px;
  border: none;
  padding: 10px;
  color: #8A92A6;
}

div.widgetselect {
  width: 80px;
  border: none;
  padding: 24px;
  color: #8A92A6;
}

select.widgetselect:focus,
select.widgetselect:focus-visible {
  outline: none !important;
  border: none !important;
  border-color: red
}

.container select,
.container input {
  border: 1px solid #dedede;
  padding: 7px;
}

@keyframes donut-chart-fill {
  to {
    stroke-dasharray: 0 100;
  }
}

.svg-item {
  width: 100%;
  height: 80px;
  font-size: 16px;
}

.donut-ring {
  stroke: #E9ECEF;
}

.donut-segment {
  animation: donut-chart-fill 1s reverse ease-in;
  transform-origin: center;
  stroke: #409CF2;
}

.donut-text {
  font-family: Arial, Helvetica, sans-serif;
  fill: #409CF2;
}

.donut-label {
  font-size: 0.28em;
  font-weight: 700;
  line-height: 1;
  fill: #000;
  transform: translateY(0.25em);
}

.donut-percent {
  font-size: 0.5em;
  fill: #FF6200;
  line-height: 1;
  transform: translateY(0.5em);
}

.leftwidget ul {
  margin-top: 0px;
  margin-bottom: 0;
  list-style: none;
  padding-left: 0;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;

}

.leftwidget ul li {
  margin-top: 8px;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  font-size: 15px;
  margin-right: 15px;
  color: #8A92A6;
}

.leftwidget ul li:last-child {
  margin-right: 0px;
}

.leftwidget ul li .legend-dots {
  height: .7rem;
  width: .7rem;
  margin-right: .4rem;
  display: inline-block;
  font-size: 0.875rem;
  border-radius: 100%;
  cursor: pointer;
}

.rightwidget ul.custom-dots li .legend-dots {
  height: 12px !important;
  width: 12px !important;
}

.rightwidget ul li.custom-li {
  margin-top: 6px !important;
}

.rightwidget ul {
  margin-top: 0px;
  margin-bottom: 0;
  list-style: none;
  padding-left: 0;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;

}

.rightwidget ul li {
  margin-top: 50px;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
  font-size: 15px;
  margin-right: 15px;
  color: #8A92A6;
}

.rightwidget ul li:last-child {
  margin-right: 0px;
}

.rightwidget ul li .legend-dots {
  height: .7rem;
  width: .7rem;
  margin-right: .4rem;
  display: inline-block;
  font-size: 0.875rem;
  border-radius: 100%;
}

.bluedot {
  background: #3A57E8;
}

.greydot {
  background: #E9ECEF;
}

.commonleftbar .chart {
  flex-grow: 1;
  height: 280px;
  margin-bottom: 50px;
}

.chart h2 {
  font-size: 25px;
  font-weight: 600;
}

.commonleftbar .chart .updateForm {
  margin: 40px auto;
}

.commonleftbar .chart .updateForm .input-group {
  margin-right: 10px;
  display: inline-block;
  max-width: 50px;
}

.commonleftbar .chart .updateForm .input-group label {
  font-weight: bold;
  flex-grow: 1;
  text-align: right;
  margin-right: 10px;
}

.commonleftbar .chart .updateForm .input-group input {
  padding: 5px;
  border: none;
  max-width: 100%;
}

.commonleftbar .chart .updateForm .input-group input:focus {
  outline: none;
}

.tabs {
  clear: both;
  position: relative;
  max-width: 100%;
  width: 100%;
  /* you can either manually set a min-height here or do it via JS ---> */
}

.tab {
  float: left;
}

.tab label {
  margin-right: 20px;
  position: relative;
  top: 0;
  cursor: pointer;
  color: #333;
  text-transform: capitalize;
}

.tab [type=radio] {
  display: none;
}
/* ... */

